fix(security): Handle blank authorities in UserContextFilter
The UserContextFilter now robustly handles cases where the "X-User-Authorities" header might be present but contains a blank string. Previously, such a scenario could lead to an empty string being added as an authority, which is not a valid or intended behavior. This change ensures that only non-blank authority strings are parsed and added to the Spring Security context, improving the reliability and correctness of the security principal.